--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Guys!</title>
 </head>
 <body>
-<h1>Hello Hello, Yeah... I'm in a place called vertigo</h1>
+<h1>Hello Hello, Yeah</h1>
 </body>
 </html>
